--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
             crossorigin="anonymous"
         />
 
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cousine:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+
         <title>React App</title>
     </head>
 
