--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,8 @@
 			integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
 			crossorigin="anonymous"
 		/>
-
 		<link
-			href="https://fonts.googleapis.com/css2?family=Cousine:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 
