--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,21 @@
 			rel="stylesheet"
 		/>
 
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-131394816-2"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "UA-131394816-2");
+		</script>
+
 		<title>BBCode</title>
 	</head>
 
