--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,10 @@
 		/>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script
 			async
-			src="https://www.googletagmanager.com/gtag/js?id=UA-131394816-2"
+			src="https://www.googletagmanager.com/gtag/js?id=G-5JLKHV4E36"
 		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -45,7 +46,7 @@
 			}
 			gtag("js", new Date());
 
-			gtag("config", "UA-131394816-2");
+			gtag("config", "G-5JLKHV4E36");
 		</script>
 
 		<title>BBCode</title>
